# phosphorescent.dev

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
src/: app.py
src/static/styles/: style.css
src/templates/: index.html
