[tool.poetry]
name = "phosphorescent.dev"
version = "0.1.0"
description = ""
authors = ["Joshua Mankelow <joshua@mankelow.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
